Moved Swiper button outside Swiper component to avoid button overlapping SwiperSlide that causes misclick; Added email validation and confirmation message for email popup, also separate  for maintainability ; Removed Bootstrap Collapse from  to avoid  Bootstrap Accordion's malfunctioning, alternatively use data-bs-toggle and data-bs-target to handle mobile menu's collapse on click, also added responsive design to avoid navbar flickering on desktop version; Fixed  bottom horizontal alignment

--- a/src/assets/scss/components/_product-card.scss
+++ b/src/assets/scss/components/_product-card.scss
@@ -44,6 +44,9 @@
       height: 240px;
     }
   }
+  .card-body {
+    height: 90px;
+  }
 }
 
 .product-card,
